src/objects/PSA_Logging__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for custom apex logging functions</description>
    <fields>
        <fullName>PSA_Enable_Apex_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on custom apex logging</description>
        <inlineHelpText>Turns on custom apex logging</inlineHelpText>
        <label>Enable Apex Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Error_Email_List__c</fullName>
        <description>List of email addresses to notify of an error</description>
        <inlineHelpText>List of email addresses to notify of an error</inlineHelpText>
        <label>Error Email List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Logging_Level__c</fullName>
        <description>Used to determine which apex log records to log - higher numbers mean more detailed logging.</description>
        <inlineHelpText>Used to determine which apex log records to log - higher numbers mean more detailed logging.</inlineHelpText>
        <label>Logging Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaBillingEventGeneration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude logging from occurring in the psaBillingEventGeneration class</description>
        <inlineHelpText>Exclude logging from occurring in the psaBillingEventGeneration class</inlineHelpText>
        <label>No psaBillingEventGeneration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaBillingEventRecalc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, psa apex log records will not be created for this class</description>
        <inlineHelpText>If true, psa apex log records will not be created for this class</inlineHelpText>
        <label>No psaBillingEventRecalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaBillingEventRegenerateControl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, no apex log records for this class will be saved</description>
        <inlineHelpText>If true, no apex log records for this class will be saved</inlineHelpText>
        <label>No psaBillingEventRegenerateController</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaBillingEventRegenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, no apex log records will be saved for this class</description>
        <inlineHelpText>If true, no apex log records will be saved for this class</inlineHelpText>
        <label>No psaBillingEventRegenerate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaBillingRulesApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude logging from occurring in the psaBillingRulesApplication class</description>
        <inlineHelpText>Exclude logging from occurring in the psaBillingRulesApplication class</inlineHelpText>
        <label>No psaBillingRulesApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaInvoiceSummaryLineRefresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude logging from occurring in the psaInvoiceSummaryLineRefresh class</description>
        <inlineHelpText>Exclude logging from occurring in the psaInvoiceSummaryLineRefresh class</inlineHelpText>
        <label>No psaInvoiceSummaryLineRefresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaRefreshProjectBillingBalances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude logging from occurring in the psaRefreshProjectBillingBalances class</description>
        <inlineHelpText>Exclude logging from occurring in the psaRefreshProjectBillingBalances class</inlineHelpText>
        <label>No psaRefreshProjectBillingBalances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_No_psaTimecardDailyCap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude logging from occurring in the psaTimecardDailyCap class</description>
        <inlineHelpText>Exclude logging from occurring in the psaTimecardDailyCap class</inlineHelpText>
        <label>No psaTimecardDailyCap</label>
        <type>Checkbox</type>
    </fields>
    <label>PSA Logging</label>
</CustomObject>